--- a/public/home-amp.html
+++ b/public/home-amp.html
@@ -187,9 +187,6 @@
       .go-no-wrap {
           white-space: nowrap;
       }
-      .go-text-right {
-          text-align: right;
-      }
       blockquote {
         padding: 10px 0 10px 20px;
         position: relative;
@@ -482,7 +479,8 @@
         margin-right: auto;
         margin-left: auto;
       }
-      @media (max-width: 767px) {
+    
+     @media (max-width: 767px) {
         .container {
           max-width: 540px;
         }
@@ -2408,7 +2406,6 @@
         margin-left: -1.5rem;
         margin-right: -1.5rem;
       }
-      .cid-rYm4IN95Dg .go-text,
       .cid-rYm4IN95Dg .social {
         text-align: right;
       }
@@ -2473,6 +2470,16 @@
         .cid-rYm7pghMbk .items-col {
           margin: 2rem 0;
         }
+        .cid-rYm7pghMbk .item {
+          text-align: left;
+        }
+        .image-block amp-img{
+          height: 22px;
+          width: 120px;
+        }
+        .display-7 {
+          font-size: 1rem;
+        }
       }
       .cid-rYm7pghMbk .group-title {
         color: #3e403d;
@@ -2480,7 +2487,6 @@
       .cid-rYm7pghMbk .item,
       .cid-rYm7pghMbk .items {
         color: #3e403d;
-        text-align: right;
       }
       .engine {
         position: absolute;
@@ -3114,7 +3120,7 @@ Automation testing
                 >
                   Trustworthy &amp; Professional
                 </h4>
-                <p class="go-text go-fonts-style align-left display-4">
+                <p class="go-text go-fonts-style display-4">
                   Golden Owl is one of the leading outsourcing software
                   development companies in Vietnam.
                   <br />
@@ -3152,7 +3158,7 @@ Automation testing
                 >
                   Flexibility &amp; Transparency
                 </h4>
-                <p class="go-text go-fonts-style align-left display-4">
+                <p class="go-text go-fonts-style display-4">
                   Our strengths lie in solid expertise of a wide range of
                   technologies and the team flexibility to fit clients needs.
                   <br />
@@ -3191,7 +3197,7 @@ Automation testing
                 >
                   Compliance &amp; Commitment
                 </h4>
-                <p class="go-text go-fonts-style align-left display-4">
+                <p class="go-text go-fonts-style display-4">
                   We follow all the legal procedures of trading with our clients
                   to make sure that no one has to face any legal issue.
                   <br />
@@ -3344,7 +3350,7 @@ Automation testing
                   RAJA
                 </h3>
                 <p
-                  class="go-text go-fonts-style align-center go-pt-1 display-7"
+                  class="go-text go-fonts-style go-pt-1 display-7"
                 >
                   "GoldenOwl have proven to be an extremely cost effective and
                   professional resource. We have been particularly impressed
@@ -3378,17 +3384,17 @@ Automation testing
               </div>
               <div class="card-box go-pt-4 go-px-4 go-pb-5">
                 <h4
-                  class="go-fonts-style card-subtitle align-center go-semibold display-4"
+                  class="go-fonts-style card-subtitle go-semibold display-4"
                 >
                   ASIAN INSTITUTE OF TECHNOLOGY
                 </h4>
                 <h3
-                  class="card-title go-fonts-style align-center go-pt-1 display-5 go-pb-3"
+                  class="card-title go-fonts-style go-pt-1 display-5 go-pb-3"
                 >
                   DR. DIDIN PERMADI
                 </h3>
                 <p
-                  class="go-text go-fonts-style align-center go-pt-1 display-7"
+                  class="go-text go-pt-1 display-7"
                 >
                   "We are glad to use of one of the masterpiece products from
                   Goldenowl inc. The software is really useful to overcome a
@@ -3427,17 +3433,17 @@ Automation testing
               </div>
               <div class="card-box go-pt-4 go-px-4 go-pb-5">
                 <h4
-                  class="go-fonts-style card-subtitle align-center go-semibold display-4"
+                  class="go-fonts-style card-subtitle go-semibold display-4"
                 >
                   PROJECT PC CRAWLER
                 </h4>
                 <h3
-                  class="card-title go-fonts-style align-center go-pt-1 display-5 go-pb-3"
+                  class="card-title go-fonts-style go-pt-1 display-5 go-pb-3"
                 >
                   WILL BEEBE
                 </h3>
                 <p
-                  class="go-text go-fonts-style align-center go-pt-1 display-7"
+                  class="go-text go-fonts-style go-pt-1 display-7"
                 >
                   "Golden Owl has been a stable, consistent, and strong
                   contributor to our company and I'm looking forward to working
@@ -3638,8 +3644,8 @@ Automation testing
 
     <section class="footer3 cid-rYm7pghMbk" id="footer3-j">
       <div class="container">
-        <div class="go-row go-jc-c">
-          <div class="image-block go-col-sm-6 go-col-md-2">
+        <div class="go-row">
+          <div class="image-block go-col-sm-12 go-col-md-2">
             <amp-img
               src="assets/images/download-13-192x32.png"
               layout="responsive"
@@ -3657,8 +3663,8 @@ Automation testing
               </div>
             </amp-img>
           </div>
-          <div class="items-col go-col-sm-12 align-right go-col-md-4">
-            <h3 class="go-fonts-style group-title go-bold go-pb-2 display-5 go-text-right">
+          <div class="items-col go-col-sm-6 go-col-md-4">
+            <h3 class="go-fonts-style group-title go-bold go-pb-2 display-5">
               Our services
             </h3>
             <div class="items">
@@ -3702,8 +3708,8 @@ Automation testing
             </div>
           </div>
 
-          <div class="items-col go-col-sm-6 align-right go-col-md-3">
-            <h3 class="go-fonts-style group-title go-bold go-pb-2 display-5 go-text-right">
+          <div class="items-col go-col-sm-6 go-col-md-3">
+            <h3 class="go-fonts-style group-title go-bold go-pb-2 display-5">
               Links
             </h3>
             <div class="items">
@@ -3744,8 +3750,8 @@ Automation testing
             </div>
           </div>
 
-          <div class="items-col go-col-sm-6 align-right go-col-md-3">
-            <h3 class="go-fonts-style group-title go-bold go-pb-2 display-5 go-text-right">
+          <div class="items-col go-col-sm-6 go-col-md-3">
+            <h3 class="go-fonts-style group-title go-bold go-pb-2 display-5">
               Other
             </h3>
             <div class="items">
@@ -3761,6 +3767,20 @@ Automation testing
                   href="https://goldenowl.asia/contact-us"
                 >
                     Contact us
+                </a>
+              </p>
+              <p class="item go-fonts-style go-pb-1 display-7">
+                <a
+                  href="https://goldenowl.asia/faq"
+                >
+                    FAQ
+                </a>
+              </p>
+              <p class="item go-fonts-style go-pb-1 display-7">
+                <a
+                  href="https://goldenowl.asia/blog"
+                >
+                    Blog
                 </a>
               </p>
             </div>
